umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami-web
  namespace: umami-web
  annotations:
    keel.sh/policy: force
    keel.sh/pollSchedule: '@every 24h'
    keel.sh/trigger: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: umami-web
  template:
    metadata:
      labels:
        app: umami-web
    spec:
      containers:
        - name: web
          image: ghcr.io/umami-software/umami:postgresql-latest
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
