umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-web
  labels:
    app: umami-web
spec:
  selector:
    app: umami-web
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
