umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-web-ingress
  namespace: umami-web
  labels:
    app: umami-web
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: umami.wololoaeyoyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami-web-service
                port:
                  number: 5000
